# gpt-anywhere

./: .env  .gitignore  README.md  app.js  help.html  index.html  main.html  package.json  settings.html  signin.html  styles.css  vite.config.ts
assets/: gpt-anywhere-demo.mkv
src/: App.tsx  Root.tsx  global.css  help.tsx  main.tsx  settings.tsx  signin.tsx  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  window.rs
src/components/: ConfirmationBox.tsx  CopyButton.tsx  ErrorBox.tsx  Logo.tsx  PromptBox.tsx  ResponseBox.tsx  Search.tsx  SignInForm.tsx  Titlebar.tsx  ToolbarButton.tsx  UnauthorizedErrorBox.tsx
src/components/CustomUI/: Button.tsx  Divider.tsx  Field.tsx  Flex.tsx  Icon.tsx
src/components/ResponseBox/: index.tsx
src/components/Search/: index.tsx
src/components/Titlebar/: index.tsx
src/hooks/: useAI.ts
src/pages/: App.tsx  AppRadit.tsx  Help.tsx  Settings.tsx  SignIn.tsx
src/services/: baseService.ts
src/styles/: custom-components-classes.ts
src/util/: ai.ts  consts.tsx  helpers.ts  llm.ts  markdown.tsx  openai.ts  store.ts  testMarkdown.ts  theme.ts
src/util/hooks/: useChatLog.ts
